chore(tokens): import tokens without :root selector in token files

--- a/src/patternfly/base/tokens/tokens-charts.scss
+++ b/src/patternfly/base/tokens/tokens-charts.scss
@@ -1,25 +1,36 @@
-// /**
-//  * Do not edit directly
-//  * Generated on Mon, 01 Apr 2024 17:12:28 GMT
-//  */
 
-:root {
-  --pf-t--chart--stroke--width--sm: 2;
-  --pf-t--chart--stroke--width--xs: 1;
-  --pf-t--chart--BorderWidth--lg: 8;
-  --pf-t--chart--BorderWidth--sm: 2;
-  --pf-t--chart--BorderWidth--xs: 1;
-  --pf-t--chart--color--fills-and-strokes--fill--color--white: var(--pf-t--color--white);
-  --pf-t--chart--color--fills-and-strokes--fill--color--900: var(--pf-t--color--gray--90);
-  --pf-t--chart--color--fills-and-strokes--fill--color--700: var(--pf-t--color--gray--70);
-  --pf-t--chart--color--fills-and-strokes--fill--color--500: var(--pf-t--color--gray--50);
-  --pf-t--chart--color--fills-and-strokes--fill--color--400: var(--pf-t--color--gray--40);
-  --pf-t--chart--color--fills-and-strokes--fill--color--300: var(--pf-t--color--gray--30);
-  --pf-t--chart--color--fills-and-strokes--fill--color--200: var(--pf-t--color--gray--20);
-  --pf-t--chart--color--fills-and-strokes--fill--color--100: var(--pf-t--color--gray--10);
-  --pf-t--chart--color--fills-and-strokes--warning--color--200: var(--pf-t--color--yellow--40);
-  --pf-t--chart--color--fills-and-strokes--warning--color--100: var(--pf-t--color--orange--40);
-  --pf-t--chart--color--fills-and-strokes--success--color--100: var(--pf-t--color--blue--50);
+// Do not edit directly
+// Generated on Wed, 01 May 2024 14:26:30 GMT
+
+@mixin pf-v6-tokens {
+  --pf-t--chart--global--layout--width: 450;
+  --pf-t--chart--global--layout--height: 300;
+  --pf-t--chart--global--layout--padding: 50;
+  --pf-t--chart--global--label--stroke--width: 0;
+  --pf-t--chart--global--label--margin: 8;
+  --pf-t--chart--global--label--padding: 10;
+  --pf-t--chart--global--FontSize--2xl: 22;
+  --pf-t--chart--global--FontSize--lg: 18;
+  --pf-t--chart--global--FontSize--sm: 14;
+  --pf-t--chart--global--FontSize--xs: 12;
+  --pf-t--chart--global--stroke--width--sm: 2;
+  --pf-t--chart--global--stroke--width--xs: 1;
+  --pf-t--chart--global--BorderWidth--lg: 8;
+  --pf-t--chart--global--BorderWidth--sm: 2;
+  --pf-t--chart--global--BorderWidth--xs: 1;
+  --pf-t--chart--global--label--fill: var(--pf-t--color--gray--90);
+  --pf-t--chart--global--danger--color--100: var(--pf-t--color--red-orange--60);
+  --pf-t--chart--global--success--color--100: var(--pf-t--color--blue--50);
+  --pf-t--chart--global--warning--color--200: var(--pf-t--color--yellow--40);
+  --pf-t--chart--global--warning--color--100: var(--pf-t--color--orange--40);
+  --pf-t--chart--global--fill--color--white: var(--pf-t--color--white);
+  --pf-t--chart--global--fill--color--900: var(--pf-t--color--gray--90);
+  --pf-t--chart--global--fill--color--700: var(--pf-t--color--gray--70);
+  --pf-t--chart--global--fill--color--500: var(--pf-t--color--gray--50);
+  --pf-t--chart--global--fill--color--400: var(--pf-t--color--gray--40);
+  --pf-t--chart--global--fill--color--300: var(--pf-t--color--gray--30);
+  --pf-t--chart--global--fill--color--200: var(--pf-t--color--gray--20);
+  --pf-t--chart--global--fill--color--100: var(--pf-t--color--gray--10);
   --pf-t--chart--color--black--500: var(--pf-t--color--gray--50);
   --pf-t--chart--color--black--400: var(--pf-t--color--gray--40);
   --pf-t--chart--color--black--300: var(--pf-t--color--gray--30);
@@ -60,58 +71,58 @@
   --pf-t--chart--color--blue--300: var(--pf-t--color--blue--50);
   --pf-t--chart--color--blue--200: var(--pf-t--color--blue--40);
   --pf-t--chart--color--blue--100: var(--pf-t--color--blue--30);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--3500: var(--pf-t--chart--color--black--400);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--3400: var(--pf-t--chart--color--teal--200);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--3300: var(--pf-t--chart--color--orange--400);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--3200: var(--pf-t--chart--color--purple--200);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--3100: var(--pf-t--chart--color--green--400);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--3000: var(--pf-t--chart--color--yellow--200);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--2900: var(--pf-t--chart--color--blue--400);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--2800: var(--pf-t--chart--color--black--200);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--2700: var(--pf-t--chart--color--teal--400);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--2600: var(--pf-t--chart--color--orange--200);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--2500: var(--pf-t--chart--color--purple--400);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--2400: var(--pf-t--chart--color--green--200);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--2300: var(--pf-t--chart--color--yellow--400);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--2200: var(--pf-t--chart--color--blue--200);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--2100: var(--pf-t--chart--color--black--500);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--2000: var(--pf-t--chart--color--teal--100);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--1900: var(--pf-t--chart--color--orange--500);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--1800: var(--pf-t--chart--color--purple--100);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--1700: var(--pf-t--chart--color--green--500);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--1600: var(--pf-t--chart--color--yellow--100);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--1500: var(--pf-t--chart--color--blue--500);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--1400: var(--pf-t--chart--color--black--100);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--1300: var(--pf-t--chart--color--teal--500);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--1200: var(--pf-t--chart--color--orange--100);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--1100: var(--pf-t--chart--color--purple--500);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--1000: var(--pf-t--chart--color--green--100);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--900: var(--pf-t--chart--color--yellow--500);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--800: var(--pf-t--chart--color--blue--100);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--700: var(--pf-t--chart--color--black--300);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--600: var(--pf-t--chart--color--teal--300);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--500: var(--pf-t--chart--color--orange--300);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--400: var(--pf-t--chart--color--purple--300);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--300: var(--pf-t--chart--color--green--300);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--200: var(--pf-t--chart--color--yellow--300);
-  --pf-t--chart--theme--colorscales--Multi-colored-unordered--colorscale--100: var(--pf-t--chart--color--blue--300);
-  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--2500: var(--pf-t--chart--color--orange--200);
-  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--2400: var(--pf-t--chart--color--yellow--400);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--3500: var(--pf-t--chart--color--black--400);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--3400: var(--pf-t--chart--color--teal--200);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--3300: var(--pf-t--chart--color--orange--400);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--3200: var(--pf-t--chart--color--purple--200);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--3100: var(--pf-t--chart--color--green--400);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--3000: var(--pf-t--chart--color--yellow--200);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--2900: var(--pf-t--chart--color--blue--400);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--2800: var(--pf-t--chart--color--black--200);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--2700: var(--pf-t--chart--color--teal--400);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--2600: var(--pf-t--chart--color--orange--200);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--2500: var(--pf-t--chart--color--purple--400);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--2400: var(--pf-t--chart--color--green--200);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--2300: var(--pf-t--chart--color--yellow--400);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--2200: var(--pf-t--chart--color--blue--200);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--2100: var(--pf-t--chart--color--black--500);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--2000: var(--pf-t--chart--color--teal--100);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--1900: var(--pf-t--chart--color--orange--500);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--1800: var(--pf-t--chart--color--purple--100);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--1700: var(--pf-t--chart--color--green--500);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--1600: var(--pf-t--chart--color--yellow--100);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--1500: var(--pf-t--chart--color--blue--500);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--1400: var(--pf-t--chart--color--black--100);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--1300: var(--pf-t--chart--color--teal--500);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--1200: var(--pf-t--chart--color--orange--100);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--1100: var(--pf-t--chart--color--purple--500);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--1000: var(--pf-t--chart--color--green--100);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--900: var(--pf-t--chart--color--yellow--500);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--800: var(--pf-t--chart--color--blue--100);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--700: var(--pf-t--chart--color--black--300);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--600: var(--pf-t--chart--color--teal--300);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--500: var(--pf-t--chart--color--orange--300);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--400: var(--pf-t--chart--color--purple--300);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--300: var(--pf-t--chart--color--green--300);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--200: var(--pf-t--chart--color--yellow--300);
+  --pf-t--chart--theme--colorscales--multi-colored-unordered--colorscale--100: var(--pf-t--chart--color--blue--300);
+  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--2500: var(--pf-t--chart--color--orange--400);
+  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--2400: var(--pf-t--chart--color--yellow--200);
   --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--2300: var(--pf-t--chart--color--teal--400);
   --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--2200: var(--pf-t--chart--color--green--200);
   --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--2100: var(--pf-t--chart--color--blue--400);
-  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--2000: var(--pf-t--chart--color--orange--400);
-  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--1900: var(--pf-t--chart--color--yellow--200);
+  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--2000: var(--pf-t--chart--color--orange--200);
+  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--1900: var(--pf-t--chart--color--yellow--400);
   --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--1800: var(--pf-t--chart--color--teal--200);
   --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--1700: var(--pf-t--chart--color--green--400);
   --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--1600: var(--pf-t--chart--color--blue--200);
-  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--1500: var(--pf-t--chart--color--orange--100);
-  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--1400: var(--pf-t--chart--color--yellow--500);
+  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--1500: var(--pf-t--chart--color--orange--500);
+  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--1400: var(--pf-t--chart--color--yellow--100);
   --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--1300: var(--pf-t--chart--color--teal--500);
   --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--1200: var(--pf-t--chart--color--green--100);
   --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--1100: var(--pf-t--chart--color--blue--500);
-  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--1000: var(--pf-t--chart--color--orange--500);
-  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--900: var(--pf-t--chart--color--yellow--100);
+  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--1000: var(--pf-t--chart--color--orange--100);
+  --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--900: var(--pf-t--chart--color--yellow--500);
   --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--800: var(--pf-t--chart--color--teal--100);
   --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--700: var(--pf-t--chart--color--green--500);
   --pf-t--chart--theme--colorscales--multi-colored-ordered--colorscale--600: var(--pf-t--chart--color--blue--100);
@@ -155,5 +166,4 @@
   --pf-t--chart--theme--colorscales--blue--colorscale--300: var(--pf-t--chart--color--blue--500);
   --pf-t--chart--theme--colorscales--blue--colorscale--200: var(--pf-t--chart--color--blue--100);
   --pf-t--chart--theme--colorscales--blue--colorscale--100: var(--pf-t--chart--color--blue--300);
-  --pf-t--chart--color--fills-and-strokes--danger--color--100: var(--pf-t--global--color--status--danger--100);
 }
