--- a/src/patternfly/base/tokens/tokens-dark.scss
+++ b/src/patternfly/base/tokens/tokens-dark.scss
@@ -1,9 +1,8 @@
-// /**
-//  * Do not edit directly
-//  * Generated on Mon, 01 Apr 2024 17:12:28 GMT
-//  */
 
-:root:where(.pf-v6-theme-dark) {
+// Do not edit directly
+// Generated on Wed, 01 May 2024 14:26:30 GMT
+
+@mixin pf-v6-tokens {
   --pf-t--global--background--color--action--plain--default: rgba(0, 0, 0, 0.0000);
   --pf-t--global--dark--box-shadow--color--100: rgba(0, 0, 0, 0.5000);
   --pf-t--global--dark--background--color--600: rgba(199, 199, 199, 0.1500);
