--- a/src/patternfly/base/tokens/tokens-default.scss
+++ b/src/patternfly/base/tokens/tokens-default.scss
@@ -1,9 +1,8 @@
-// /**
-//  * Do not edit directly
-//  * Generated on Mon, 01 Apr 2024 17:12:28 GMT
-//  */
 
-:root {
+// Do not edit directly
+// Generated on Wed, 01 May 2024 14:26:30 GMT
+
+@mixin pf-v6-tokens {
   --pf-t--global--background--color--action--plain--default: rgba(255, 255, 255, 0.0000);
   --pf-t--global--background--color--600: rgba(199, 199, 199, 0.2500);
   --pf-t--global--background--color--500: rgba(21, 21, 21, 0.2000);
@@ -166,12 +165,12 @@
   --pf-t--global--box-shadow--X--sm--bottom: var(--pf-t--global--box-shadow--X--400);
   --pf-t--global--box-shadow--X--sm--top: var(--pf-t--global--box-shadow--X--400);
   --pf-t--global--box-shadow--X--sm--default: var(--pf-t--global--box-shadow--X--400);
-  --pf-t--global--z-index--2xl: 600;
-  --pf-t--global--z-index--xl: 500;
-  --pf-t--global--z-index--lg: 400;
-  --pf-t--global--z-index--md: 300;
-  --pf-t--global--z-index--sm: 200;
-  --pf-t--global--z-index--xs: 100;
+  --pf-t--global--z-index--2xl: var(--pf-t--global--z-index--600);
+  --pf-t--global--z-index--xl: var(--pf-t--global--z-index--500);
+  --pf-t--global--z-index--lg: var(--pf-t--global--z-index--400);
+  --pf-t--global--z-index--md: var(--pf-t--global--z-index--300);
+  --pf-t--global--z-index--sm: var(--pf-t--global--z-index--200);
+  --pf-t--global--z-index--xs: var(--pf-t--global--z-index--100);
   --pf-t--global--font--size--4xl: var(--pf-t--global--font--size--800);
   --pf-t--global--font--size--3xl: var(--pf-t--global--font--size--700);
   --pf-t--global--font--size--2xl: var(--pf-t--global--font--size--600);
