--- a/src/patternfly/base/tokens/tokens-palette.scss
+++ b/src/patternfly/base/tokens/tokens-palette.scss
@@ -1,9 +1,8 @@
-// /**
-//  * Do not edit directly
-//  * Generated on Mon, 01 Apr 2024 17:12:28 GMT
-//  */
 
-:root {
+// Do not edit directly
+// Generated on Wed, 01 May 2024 14:26:30 GMT
+
+@mixin pf-v6-tokens {
   --pf-t--color--red--70: #5f0000;
   --pf-t--color--red--60: #a60000;
   --pf-t--color--red--50: #e00;
