feat(all): fix progress indicator inline-end to inline-start

--- a/src/patternfly/components/Progress/progress.scss
+++ b/src/patternfly/components/Progress/progress.scss
@@ -176,7 +176,7 @@
   // disable linter as the indicator element should always grow ltr
   // stylelint-disable liberty/use-logical-spec
   inset-block-start: 0;
-  inset-inline-end: 0;
+  inset-inline-start: 0;
   // stylelint-enable
 }
 
